Update HighScoreAdmin.java